--- a/CSS/resume-style.css
+++ b/CSS/resume-style.css
@@ -1,5 +1,5 @@
 /* styles.css */
-
+/*
 body {
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@ body {
     align-items: center;
     min-height: 75vh;
     margin: 20px 0;
-    background: linear-gradient(to bottom, #2E2E2E, #000000); /* Space grey to black gradient background */
+    background: linear-gradient(to bottom, #2E2E2E, #000000);
     position: relative;
 }
 
@@ -23,7 +23,7 @@ body {
     display: inline-block;
     text-align: center;
     text-decoration: none;
-    color: #FFFFFF; /* White text color */
+    color: #FFFFFF; /* White text color 
     font-size: 30px;
     margin: 0 1em;
 }
@@ -35,6 +35,8 @@ body {
 .right {
     text-align: right;
 }
+
+*/
 
 #resume_text {
     color: transparent;
