--- a/CSS/portfolio-style.css
+++ b/CSS/portfolio-style.css
@@ -214,7 +214,8 @@ body {
 
 .role {
     color: #FFFFFF;
-    font-size: 16px;
+    font-size: 20px;
+    text-decoration: underline;
     margin: 5px 0;
 }
 
