--- a/CSS/portfolio-style.css
+++ b/CSS/portfolio-style.css
@@ -131,18 +131,18 @@ body {
 }
 
 .image-container {
-    display: flex;
+    display: grid;
     align-items: flex-start;
-    margin: 80px 0;
+    margin: 7vh 0;
 }
 
 .image-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 450px;
-    min-height: 400px;
-    margin-right: 30px;
+    width: 60vh;
+    min-height: 60vh;
+    margin-right: 6vh;
 }
 
 .image-content h2 {
@@ -174,9 +174,9 @@ body {
 
 .about-me-info p {
     color: #FFFFFF;
-    font-size: 24px;
+    font-size: 3vh;
     line-height: 1.4;
-    max-width: 550px;
+    max-width: 35vw;
     margin-top: 0;
 }
 
@@ -195,14 +195,14 @@ body {
 
 .latest-game-info {
     text-align: left;
-    margin-top: 25px;
+    margin-top: 4vh;
 }
 
 .latest-game-info p {
     color: #FFFFFF;
-    font-size: 19px;
+    font-size: 3vh;
     line-height: 1.4;
-    max-width: 750px;
+    max-width: 69vw;
     margin-top: 0;
 }
 
