--- a/CSS/about-style.css
+++ b/CSS/about-style.css
@@ -43,9 +43,9 @@ body {
     color: transparent;
     outline-color: #00A859; /* MSU green outline */
     text-align: center;
-    letter-spacing: 0.1vw;
-    font-size: 6vh;
-    margin: 1vh 0;
+    letter-spacing: 1px;
+    font-size: 1.5em;
+    margin: 20px 0;
     white-space: nowrap;
     overflow: hidden;
     position: relative;
