--- a/CSS/resume-style.css
+++ b/CSS/resume-style.css
@@ -43,7 +43,7 @@ body {
     outline-color: #00A859; /* MSU green outline */
     text-align: center;
     letter-spacing: 1px;
-    font-size: 40px;
+    font-size: 1.5em;
     margin: 20px 0;
     white-space: nowrap;
     overflow: hidden;
